messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
  labels:
    app: messaging-app
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
      - name: messaging-app
        image: messaging-app:latest  # Replace with the appropriate image name and tag
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
