messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-messaging-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: <http://127.0.0.1:8000/>  
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service  
            port:
              number: 8080
